APB-773 set correct data in data-value for existing resource, adds vertical-align: middle; for .common_app_data_display_master_col1 and .common_app_data_display_master_col2

--- a/apps/common/public/css/common_app.css
+++ b/apps/common/public/css/common_app.css
@@ -414,6 +414,7 @@ select {
 	text-align: start;
     width: calc(50% - 1em);
 	word-wrap: break-word;
+	vertical-align: middle;
 }
 .common_app_data_display_master_col2[contentEditable=true]{
 	border:1px solid;
